--- a/README.textile
+++ b/README.textile
@@ -26,18 +26,14 @@ The bug tracker is available here:
 h2. Usage
 
 Put this script in your PATH and download from punchmangas.com.br like this:
-<code>
-	punch_downloader.rb Bleach [chapter number]
-</code>
+<pre><code>punch_downloader.rb Bleach [chapter number]</code></pre>
 
 You will find the downloaded chapters under $HOME/Documents/PunchManga/Bleach.
 
 If you run this script without arguments, it will check your local manga downloads and check if there are any new chapters.
 
 For generate PDFs for the PunchManga downloaded images:
-<code>
-	ruby punchmanga_pdf.rb Bleach 5 10 50
-</code>
+<pre><code>ruby punchmanga_pdf.rb Bleach 5 10 50</code></pre>
 
 Meaning:
  * Manga: Bleach (name of the folder)
