--- a/README.textile
+++ b/README.textile
@@ -27,9 +27,9 @@ The bug tracker is available here:
 h2. Usage
 
 Put this script in your PATH and download from punchmangas.com.br like this:
-<pre><code>ruby punch_downloader.rb Highschool-of-the-Dead [chapter number]</code></pre>
+<pre><code>ruby punch_downloader.rb Bleach [chapter number]</code></pre>
 
-You will find the downloaded chapters under $HOME/Documents/PunchManga/Highschool-of-the-Dead.
+You will find the downloaded chapters under $HOME/Documents/PunchManga/Bleach.
 
 If you run this script without arguments, it will check your local manga downloads and check if there are any new chapters.
 
